# rust-db

./: Cargo.toml  LICENSE  README.md
src/: client.rs  rustdb.rs  server.rs
src/client/: api.rs
src/server/: api.rs  database.rs  node.rs
src/shared/: message.rs  messages.rs
src/shared/messages/: insert_message.rs
