[package]
name = "rust-db"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bincode = "1.3.3"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
rustfmt = "0.10.0"
serde = "1.0.188"

[lib]
name = "rustdb"
path = "src/rustdb.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
